force-app/main/default/objects/clofor_com_cfs__OutputMNFProcess__c/fields/clofor_com_cfs__ProductName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductName__c</fullName>
    <formula>clofor_com_cfs__Product__r.clofor_com_cfs__ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>