force-app/main/default/objects/clofor_com_cfs__OutputMNFProcess__c/fields/clofor_com_cfs__TotalSelling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalSelling__c</fullName>
    <formula>clofor_com_cfs__UnitSelling__c * clofor_com_cfs__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>